# evalrag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/backend/: Cargo.toml
app/backend/src/: main.rs
configs/: core.yaml  prompt.yaml
evalrag/: Dockerfile  main.py  requirements.txt
evalrag/api/: __init__.py  config.py  main.py
evalrag/api/model/: query.py  store_document.py
evalrag/configs/: core.yaml
evalrag/core/: __init__.py  _indexing.py  config.py  eval.py  ingestion.py  main.py  rag.py
evalrag/core/config/: __init__.py  core_config.py
evalrag/core/ingestion/: __init__.py  _indexing.py  _vector_store.py  chunkers.py  embedding.py  loader.py  vector_store.py
evalrag/core/rag/: __init__.py  generator.py  retriever.py
evalrag/datasets/: qa_generation.py
evalrag/ui/: 0_🤖_index.py
evalrag/ui/pages/: 1_📈_Evaluation.py
evalrag/vectorDB/: index.faiss  index.pkl
