[project]
name = "eval-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.1",
    "fastapi[standard]>=0.126.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.4.2",
    "pyyaml>=6.0.3",
]
